# hotbits

./: .gitignore  CLAUDE.md  Makefile  README.md  cleanup.sh  concat.sh  debug_input.py  evaluate.sh  evaluate_improved.sh  hotbits-cli.js  package.json  process_timeseries.sh  pyproject.toml  requirements.txt  run_full_test.sh  run_full_test_simple.sh  startit.sh  sync-reports.sh
data/: events.txt
docs/: ANALYSIS-PLAN.md
evaluate/: analyze.txt  simple_stats.txt  simple_test_randomness.txt  test_randomness.txt
evaluate_improved/: extended_test_results.txt  extraction_stats.txt  final_stats.txt  full_output.txt  full_test_results.txt
reports/: 1755896724-dieharder.txt  1755896724-finalAnalysisReport.txt  1755899371-dieharder.txt  1755899371-finalAnalysisReport.txt  1755906099-dieharder.txt  1755906099-finalAnalysisReport.txt  1755924105-dieharder.txt  1755924105-finalAnalysisReport.txt  1755927708-dieharder.txt  1755927708-finalAnalysisReport.txt  1755931313-dieharder.txt  1755931313-finalAnalysisReport.txt  1755934910-dieharder.txt  1755934910-finalAnalysisReport.txt  1755938530-dieharder.txt  1755938530-finalAnalysisReport.txt  1755942121-dieharder.txt  1755942121-finalAnalysisReport.txt  1755945721-dieharder.txt  1755945721-finalAnalysisReport.txt  1755949323-dieharder.txt  1755949323-finalAnalysisReport.txt  1755952925-dieharder.txt  1755952925-finalAnalysisReport.txt  1755956529-dieharder.txt  1755956529-finalAnalysisReport.txt  1755960124-dieharder.txt  1755960124-finalAnalysisReport.txt  1755963729-dieharder.txt  1755963729-finalAnalysisReport.txt  (+6 more)
(+48 files in other folders)
